Incorporate DTO for attendance record